# djo

./: .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/workflows/: publish.yml
djangoapi/: apps.py  generator.py  middleware.py  types.py
djo/: apps.py  generator.py  middleware.py  swagger.py  types.py
docs/: index.md
docs/en/: configuration.md  demo-project.md  how-it-works.md  quick-start.md
docs/en/features/: drf-serializers.md  error-responses.md  headers-cookies.md  index.md  path-parameters.md  query-parameters.md  request-bodies.md  response-schema.md  security.md
docs/ru/: configuration.md  demo-project.md  how-it-works.md  quick-start.md
docs/ru/features/: drf-serializers.md  error-responses.md  headers-cookies.md  index.md  path-parameters.md  query-parameters.md  request-bodies.md  response-schema.md  security.md
docs/stylesheets/: extra.css
test/demo/: settings.py  urls.py  views.py
