[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djo"
version = "0.2.0"
description = "Drop-in interactive API docs for Django — Swagger UI, FastAPI-style, with zero decorators and zero extra dependencies"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NEFORCEO", email = "n7for8572@gmail.com"},
]
maintainers = [
    {name = "NEFORCEO", email = "n7for8572@gmail.com"},
]
keywords = [
    "django",
    "openapi",
    "swagger",
    "swagger-ui",
    "api",
    "docs",
    "rest",
    "autodoc"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.15.15",
    "pre-commit>=4.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.21.3",
]

[project.urls]
Homepage = "https://github.com/NEFORCEO/djo"
Documentation = "https://github.com/NEFORCEO/djo"
Repository = "https://github.com/NEFORCEO/djo"
Issues = "https://github.com/NEFORCEO/djo/issues"

[tool.hatch.build.targets.wheel]
packages = ["djo"]

[tool.hatch.build.targets.sdist]
include = [
    "/djo",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.15.15",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.21.3",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
